Mobile: Fix Resources double border after resources list

--- a/style.css
+++ b/style.css
@@ -338,7 +338,6 @@ a img.aligncenter {
 }
 
 .resources-item {
-  border-bottom: 2px solid;
   transition: all 0.2s ease-in-out;
 }
 
